Fixed issue with z-index of the cookie banner being under the header.
Affected file:
- assets/global/style.css

--- a/assets/global/style.css
+++ b/assets/global/style.css
@@ -413,8 +413,7 @@ p {
     position: fixed;
     text-align: center;
     width: 100%;
-    z-index: 1000; 
-
+    z-index: 100001;
 }
 
 .cookie-banner-background {
@@ -428,7 +427,7 @@ p {
     position: fixed;
     text-align: center;
     width: 100%;
-    z-index: 1000; 
+    z-index: 100001;
 }
 
 .cookie-banner {
@@ -447,7 +446,7 @@ p {
     text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1000;
+    z-index: 100001;
     width: calc(100% - 20px);
     left: 50%;
 }
